RESULTS/AutoSpec/raw_results/out-4o-oopsla/09_0011/09_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/09_0011/09_merged.c:60:3: error: unterminated comment
   60 |   /*@;
      |   ^
